dataset1235/2025-2/2318198438/users/3878856075/executions/1897677159_4233865845.log
== RUN (2025-08-27 17:10:06)
-- CODE: 
fah=input("coloque um valor:"*9/5+32)

print(round(fah,2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input("coloque um valor:"*9/5+32)
              ~~~~~~~~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input("coloque um valor:"*9/5+32)
              ~~~~~~~~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input("coloque um valor:"*9/5+32)
              ~~~~~~~~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input("coloque um valor:"*9/5+32)
              ~~~~~~~~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input("coloque um valor:"*9/5+32)
              ~~~~~~~~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input("coloque um valor:"*9/5+32)
              ~~~~~~~~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:20:20)
-- CODE: 
valor=float(input("digite:"))
print(valor*9/5+32,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite:-40.0 2
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite:14.0 2
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite:212.0 2
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite:68.45 2
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite:32.0 2
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite:86.9 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:09:21)
-- CODE: 
fah=input(x*9/5+32)

print(round(fah,2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input(x*9/5+32)
              ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input(x*9/5+32)
              ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input(x*9/5+32)
              ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input(x*9/5+32)
              ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input(x*9/5+32)
              ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input(x*9/5+32)
              ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:18:49)
-- CODE: 
valor=int(input())
print(valor*9/5+32)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
          ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
          ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
          ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
          ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
          ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
          ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:10:28)
-- CODE: 
fah=input(-40.00*9/5+32)

print(round(fah,2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2 ))
          ^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2 ))
          ^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2 ))
          ^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2 ))
          ^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2 ))
          ^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2 ))
          ^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:11:51)
-- CODE: 
x=input("coloque um valor:")
print(input(x*9/5+32))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(x*9/5+32))
                ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(x*9/5+32))
                ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(x*9/5+32))
                ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(x*9/5+32))
                ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(x*9/5+32))
                ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(x*9/5+32))
                ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:12:12)
-- CODE: 
x=input("coloque um valor:")
print(x*9/5+32))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    print(x*9/5+32))
                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    print(x*9/5+32))
                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    print(x*9/5+32))
                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    print(x*9/5+32))
                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    print(x*9/5+32))
                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    print(x*9/5+32))
                   ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 17:20:50)
-- CODE: 
valor=float(input("digite:"))
print(valor*9/5+32)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite:-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite:14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite:212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite:32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite:86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:11:39)
-- CODE: 
x=input("coloque um valor:")
print(input(x*9/5+32))

print(round(fah,2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(x*9/5+32))
                ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(x*9/5+32))
                ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(x*9/5+32))
                ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(x*9/5+32))
                ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(x*9/5+32))
                ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(x*9/5+32))
                ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:10:14)
-- CODE: 
fah=input("coloque um valor:"*9/5+32)

print(round(fah,2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input("coloque um valor:"*9/5+32)
              ~~~~~~~~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input("coloque um valor:"*9/5+32)
              ~~~~~~~~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input("coloque um valor:"*9/5+32)
              ~~~~~~~~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input("coloque um valor:"*9/5+32)
              ~~~~~~~~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input("coloque um valor:"*9/5+32)
              ~~~~~~~~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fah=input("coloque um valor:"*9/5+32)
              ~~~~~~~~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:20:05)
-- CODE: 
valor=float(input("digite:"))
print(valor*9/5+32,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite:-40.0 2
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite:14.0 2
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite:212.0 2
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite:68.45 2
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite:32.0 2
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite:86.9 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:12:18)
-- CODE: 
x=input("coloque um valor:")
print(x*9/5+32)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(x*9/5+32)
          ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(x*9/5+32)
          ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(x*9/5+32)
          ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(x*9/5+32)
          ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(x*9/5+32)
          ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(x*9/5+32)
          ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:11:05)
-- CODE: 
x=input("coloque um valor:")
fah=input(x*9/5+32)

print(round(fah,2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah=input(x*9/5+32)
              ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah=input(x*9/5+32)
              ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah=input(x*9/5+32)
              ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah=input(x*9/5+32)
              ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah=input(x*9/5+32)
              ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah=input(x*9/5+32)
              ~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:09:43)
-- CODE: 
fah=input(20.25*9/5+32)

print(round(fah,2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2 ))
          ^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2 ))
          ^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2 ))
          ^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2 ))
          ^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2 ))
          ^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2 ))
          ^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:19:40)
-- CODE: 
valor=int(input("digite:"))
print(valor*9/5+32,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:19:33)
-- CODE: 
valor=int(input("digite:"))
print(valor*9/5+32,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:19:55)
-- CODE: 
valor=int(input("digite:"))
print(valor*9/5+32,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input("digite:"))
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:19:14)
-- CODE: 
valor=int(input())
print(valor*9/5+32,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
          ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
          ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
          ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
          ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
          ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
          ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 17:15:15)
-- CODE: 
valor=int(input)
print(valor*9/5+32)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input)
          ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input)
          ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input)
          ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input)
          ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input)
          ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input)
          ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
